# PyNLME

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  main.yml  test.yml  wheels.yml
docs/: README.md  api_reference.md  implementation.md  multidimensional_input.md  release-workflow.md  troubleshooting.md  tutorial.md
examples/: README.md  advanced_usage.py  api_comparison.py  basic_usage.py  function_aliases_demo.py  grouped_vs_stacked_comparison.py  matlab_comparison.py  matlab_documentation_examples.py  multidimensional_input_demo.py  performance_benchmark.py  warfarin_case_study.py
scripts/: build-wheels.sh  bump-version.sh  prepare-release.sh  verify-installation.py
src/_core/: errors.rs  lib.rs  mle.rs  mle_batched.rs  nlme.rs  saem.rs  utils.rs
src/pynlme/: __init__.py  algorithms.py  data_types.py  errors.py  nlmefit.py  utils.py
tests/: __init__.py  test_algorithms.py  test_backend_comparison.py  test_basic.py  test_batched_ffi_optimization.py  test_data_types.py  test_function_aliases.py  test_matlab_baseline.py  test_matlab_functionality.py  test_multidimensional_input.py  test_performance_optimization.py  test_transforms.py
