[package]
name = "pynlme_core"
version = "0.4.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "src/_core/lib.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
numpy = "0.20"
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
